--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,20 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.settings/
+/out/
+/.gradle/
+/.idea/
+/shared/
+/build/
+/bower_components/
+/node_modules/
+*.iml
+*.ipr
+*.iws
+/bin/
+.project
+.classpath
+classes/
+logs/
+*.log
